deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bun
  namespace: void17-dev
spec:
  selector:
    matchLabels:
      app: bun
  replicas: 2
  template:
    metadata:
      labels:
        app: bun
    spec:
      containers:
        - name: bun
          image: int049/httpd_bun:2
          command: ['sh', '-c', 'echo The app is running! && sleep 3600']
          ports:
            - containerPort: 8080
