service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bun-service
  namespace: void17-dev
spec:
  selector:
    app: bun
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 8080
